--- a/vignettes/mediationR2.bib
+++ b/vignettes/mediationR2.bib
@@ -2,12 +2,32 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Hirose Kentaro at 2013-07-31 22:57:17 -0400 
+%% Created for Teppei Yamamoto at 2014-01-23 18:21:04 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{angr:imbe:rubi:96,
+	Author = {Angrist, Joshua D and Imbens, Guido W and Rubin, Donald B},
+	Date-Added = {2014-01-23 23:20:43 +0000},
+	Date-Modified = {2014-01-23 23:21:04 +0000},
+	Journal = {Journal of the American statistical Association},
+	Number = {434},
+	Pages = {444--455},
+	Publisher = {Taylor \&amp; Francis},
+	Title = {Identification of causal effects using instrumental variables},
+	Volume = {91},
+	Year = {1996}}
+
+@unpublished{yama:13,
+	Author = {Yamamoto, Teppei},
+	Date-Added = {2014-01-23 22:07:03 +0000},
+	Date-Modified = {2014-01-23 22:12:12 +0000},
+	Note = {Unpublished Manuscript},
+	Title = {Identification and Estimation of Causal Mediation Effects with Treatment Noncompliance},
+	Year = {2013}}
 
 @article{Zhang:2009,
 	Author = {Zhang, Zhen and Zyphur, Michael J. and Preacher, Kristopher J.},
@@ -93,11 +113,11 @@
 @article{ImaiDesign,
 	Author = {Imai, Kosuke and Tingley, Dustin and Yamamoto, Teppei},
 	Journal = {Journal of the Royal Statistical Society, {Series A} (Statistics in Society)},
-        Number = {1},
+	Month = {January},
+	Number = {1},
 	Pages = {5--51},
 	Title = {Experimental Designs for Identifying Causal Mechanisms (with discussions)},
 	Volume = {176},
-        Month = {January},
 	Year = {2013}}
 
 @article{MediateStata,
@@ -114,7 +134,7 @@
 	Journal = {Journal of Personality and Social Psychology},
 	Number = 6,
 	Pages = {1173--1182},
-	Title = {The Moderator-Mediator Variable Distinction in                   Social Psychological Research: Conceptual,                   Strategic, and Statistical Considerations},
+	Title = {The Moderator-Mediator Variable Distinction in Social Psychological Research: Conceptual, Strategic, and Statistical Considerations},
 	Volume = 51,
 	Year = 1986}
 
@@ -122,15 +142,15 @@
 	Author = {Haavelmo, Trygve},
 	Journal = {Econometrica},
 	Pages = {1--12},
-	Title = {The Statistical Implications of a System of                   Simultaneous Equations},
+	Title = {The Statistical Implications of a System of Simultaneous Equations},
 	Volume = 11,
 	Year = 1943}
 
 @book{shad:cook:camp:01,
 	Address = {Boston},
-	Author = {Shadish, William R. and Cook, Thomas D. and                   Campbell, Donald T.},
+	Author = {Shadish, William R. and Cook, Thomas D. and Campbell, Donald T.},
 	Publisher = {Houghton Mifflin},
-	Title = {Experimental and Quasi-Experimental Designs for                   Generalized Causal Inference},
+	Title = {Experimental and Quasi-Experimental Designs for Generalized Causal Inference},
 	Year = 2001}
 
 @article{robi:gree:92,
@@ -154,13 +174,13 @@
 
 @article{imai:yama:11,
 	Author = {Imai, Kosuke and Yamamoto, Teppei},
+	Journal = {Political Analysis},
+	Month = {Spring},
+	Number = {2},
+	Pages = {141--171},
 	Title = {Identification and Sensitivity Analysis for Multiple Causal Mechanisms: Revisiting Evidence from Framing Experiments},
-        Journal = {Political Analysis},
-	Year = {2013}, 
-        Volume = {21},
-        Number = {2},
-        Month = {Spring},
-        Pages = {141--171}}
+	Volume = {21},
+	Year = {2013}}
 
 @inbook{imai:etal:10,
 	Address = {New York},
@@ -186,36 +206,32 @@
 	Year = {2008}}
 
 @article{Pearl:2013,
-	author = {Pearl, Judea},
-	title = {Interpretation and Identification of Causal Mediation},
-	journal = {Psychological Methods},
-	year = {2013},
-	pages = {Forthcoming},
-}
+	Author = {Pearl, Judea},
+	Journal = {Psychological Methods},
+	Pages = {Forthcoming},
+	Title = {Interpretation and Identification of Causal Mediation},
+	Year = {2013}}
 
 @article{imai:etal:2013,
-	author = {Imai, Kosuke and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei},
-	title = {Comments on Pearl (2013)},
-	journal = {Psychological Methods},
-	year = {2013},
-	pages = {Forthcoming},
-}
-	
+	Author = {Imai, Kosuke and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei},
+	Journal = {Psychological Methods},
+	Pages = {Forthcoming},
+	Title = {Comments on Pearl (2013)},
+	Year = {2013}}
+
 @article{dici:efro:96,
-  author = {Di{C}iccio, Thomas J. and Efron, Bradley},
-  title = {Bootstrap Confidence Intervals (with Discussion)},
-  journal = {Statistical Science},
-  volume = {11},
-  pages = {189--228},
-  year = {1996},
-}	
+	Author = {Di{C}iccio, Thomas J. and Efron, Bradley},
+	Journal = {Statistical Science},
+	Pages = {189--228},
+	Title = {Bootstrap Confidence Intervals (with Discussion)},
+	Volume = {11},
+	Year = {1996}}
 
 @article{prea:haye:08,
-  title={Asymptotic and resampling strategies for assessing and comparing indirect effects in multiple mediator models},
-  author={Preacher, Kristopher J. and Hayes, Andrew F.},
-  journal={Behavior research methods},
-  volume={40},
-  number={3},
-  pages={879--891},
-  year={2008},
-}
+	Author = {Preacher, Kristopher J. and Hayes, Andrew F.},
+	Journal = {Behavior research methods},
+	Number = {3},
+	Pages = {879--891},
+	Title = {Asymptotic and resampling strategies for assessing and comparing indirect effects in multiple mediator models},
+	Volume = {40},
+	Year = {2008}}
