--- a/vignettes/mediationR2.bib
+++ b/vignettes/mediationR2.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Teppei Yamamoto at 2014-01-23 18:21:04 -0500 
+%% Created for Teppei Yamamoto at 2014-01-24 17:02:22 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Vinokur:1995,
+	Author = {Vinokur, A.D. and R.H. Price and Y. Schul},
+	Date-Added = {2014-01-24 22:02:21 +0000},
+	Date-Modified = {2014-01-24 22:02:21 +0000},
+	Journal = {American Journal of Community Psychology},
+	Month = {February},
+	Number = {1},
+	Pages = {39-74},
+	Title = {Impact of the JOBS intervention on unemployed workers varying in risk for depression},
+	Volume = {23},
+	Year = {1995}}
 
 @article{angr:imbe:rubi:96,
 	Author = {Angrist, Joshua D and Imbens, Guido W and Rubin, Donald B},
