--- a/vignettes/mediation.bib
+++ b/vignettes/mediation.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Hirose Kentaro at 2013-07-31 22:57:17 -0400 
+%% Created for Teppei Yamamoto at 2014-01-24 17:01:43 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Vinokur:1995,
+	Author = {Vinokur, A.D. and R.H. Price and Y. Schul},
+	Date-Added = {2014-01-24 21:56:10 +0000},
+	Date-Modified = {2014-01-24 21:56:10 +0000},
+	Journal = {American Journal of Community Psychology},
+	Month = {February},
+	Number = {1},
+	Pages = {39-74},
+	Title = {Impact of the JOBS intervention on unemployed workers varying in risk for depression},
+	Volume = {23},
+	Year = {1995}}
 
 @article{Zhang:2009,
 	Author = {Zhang, Zhen and Zyphur, Michael J. and Preacher, Kristopher J.},
@@ -93,11 +105,11 @@
 @article{ImaiDesign,
 	Author = {Imai, Kosuke and Tingley, Dustin and Yamamoto, Teppei},
 	Journal = {Journal of the Royal Statistical Society, {Series A} (Statistics in Society)},
-        Number = {1},
+	Month = {January},
+	Number = {1},
 	Pages = {5--51},
 	Title = {Experimental Designs for Identifying Causal Mechanisms (with discussions)},
 	Volume = {176},
-        Month = {January},
 	Year = {2013}}
 
 @article{MediateStata,
@@ -114,7 +126,7 @@
 	Journal = {Journal of Personality and Social Psychology},
 	Number = 6,
 	Pages = {1173--1182},
-	Title = {The Moderator-Mediator Variable Distinction in                   Social Psychological Research: Conceptual,                   Strategic, and Statistical Considerations},
+	Title = {The Moderator-Mediator Variable Distinction in Social Psychological Research: Conceptual, Strategic, and Statistical Considerations},
 	Volume = 51,
 	Year = 1986}
 
@@ -122,15 +134,15 @@
 	Author = {Haavelmo, Trygve},
 	Journal = {Econometrica},
 	Pages = {1--12},
-	Title = {The Statistical Implications of a System of                   Simultaneous Equations},
+	Title = {The Statistical Implications of a System of Simultaneous Equations},
 	Volume = 11,
 	Year = 1943}
 
 @book{shad:cook:camp:01,
 	Address = {Boston},
-	Author = {Shadish, William R. and Cook, Thomas D. and                   Campbell, Donald T.},
+	Author = {Shadish, William R. and Cook, Thomas D. and Campbell, Donald T.},
 	Publisher = {Houghton Mifflin},
-	Title = {Experimental and Quasi-Experimental Designs for                   Generalized Causal Inference},
+	Title = {Experimental and Quasi-Experimental Designs for Generalized Causal Inference},
 	Year = 2001}
 
 @article{robi:gree:92,
@@ -154,13 +166,13 @@
 
 @article{imai:yama:11,
 	Author = {Imai, Kosuke and Yamamoto, Teppei},
+	Journal = {Political Analysis},
+	Month = {Spring},
+	Number = {2},
+	Pages = {141--171},
 	Title = {Identification and Sensitivity Analysis for Multiple Causal Mechanisms: Revisiting Evidence from Framing Experiments},
-        Journal = {Political Analysis},
-	Year = {2013}, 
-        Volume = {21},
-        Number = {2},
-        Month = {Spring},
-        Pages = {141--171}}
+	Volume = {21},
+	Year = {2013}}
 
 @inbook{imai:etal:10,
 	Address = {New York},
@@ -186,19 +198,15 @@
 	Year = {2008}}
 
 @article{Pearl:2013,
-	author = {Pearl, Judea},
-	title = {Interpretation and Identification of Causal Mediation},
-	journal = {Psychological Methods},
-	year = {2013},
-	pages = {Forthcoming},
-}
+	Author = {Pearl, Judea},
+	Journal = {Psychological Methods},
+	Pages = {Forthcoming},
+	Title = {Interpretation and Identification of Causal Mediation},
+	Year = {2013}}
 
 @article{imai:etal:2013,
-	author = {Imai, Kosuke and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei},
-	title = {Comments on Pearl (2013)},
-	journal = {Psychological Methods},
-	year = {2013},
-	pages = {Forthcoming},
-}
-	
-	
+	Author = {Imai, Kosuke and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei},
+	Journal = {Psychological Methods},
+	Pages = {Forthcoming},
+	Title = {Comments on Pearl (2013)},
+	Year = {2013}}
