mediation.Rnw & mediationR2.Rnw up

--- a/vignettes/mediation.Rnw
+++ b/vignettes/mediation.Rnw
@@ -169,7 +169,6 @@
 \newcommand{\indep}{\mbox{$\perp\!\!\!\perp$}}
 \DeclareMathOperator{\sgn}{sgn}
 \def\independenT#1#2{\mathrel{\rlap{$#1#2$}\mkern2mu{#1#2}}}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % == document begins here
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -179,9 +178,7 @@
 %% include your article here, just as usual
 %% Note that you should use the \pkg{}, \proglang{} and \code{} commands.
 
-\SweaveOpts{keep.source=TRUE, echo = TRUE, results = verbatim, eval = TRUE,prompt="R>"}
 %\SweaveOpts{keep.source=TRUE, echo = TRUE, results = hide, eval = FALSE}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
 
@@ -228,6 +225,9 @@ provides an up-to-date description of the analyses that can be
 conducted via the \pkg{mediation} package.  To install the
 \pkg{mediation} package, use the following standard syntax for
 installing an \proglang{R} package,
+<<eval=TRUE,echo=FALSE,results=hide,keep.source=TRUE>>=
+options(prompt = "R> ")
+@ 
 <<eval=FALSE>>=
 install.packages("mediation")
 @
@@ -920,7 +920,7 @@ M_j & = & \alpha + \beta T_j + \gamma^\top V_j + \epsilon_j, \\
 Y_{ij} & = & \lambda_j + \zeta^\top X_{ij} + \upsilon_{ij}, \\
 \lambda_j & = & \lambda + \theta T_j + \phi M_j + \kappa^\top V_j + \nu_j,
 \end{eqnarray*}
-where $V_j$ is the vector of school-level covariates (\code{catholic} and \code{coed}), $X_{ij}$ is the vector of student-level covariates (\code{gender}, \code{income} and \code{pared}), and $\epsilon_j$, $\upsilon_{ij}$ and $\nu_j$ are each normally distributed stochastic errors with mean zero. Again, more complex models can be used (e.g. adding a treatment-mediator interaction term to the outcome model) if desired.
+where $V_j$ is the vector of school-level covariates (\code{catholic} and \code{coed}), $X_{ij}$ is the vector of student-level covariates (\code{gender}, \code{income} and \code{pared}), and $\epsilon_j$, $\upsilon_{ij}$ and $\nu_j$ are each normally distributed stochastic errors with mean zero. Again, more complex models can be used (e.g., adding a treatment-mediator interaction term to the outcome model) if desired.
 
 In this case, the mediator model is solely composed of the school-level variables and fixed coefficients. Hence the mediator model can be fit via the \code{lm} function using the school-level data set,
 <<keep.source=TRUE, echo = TRUE, results = verbatim>>=
@@ -1464,7 +1464,7 @@ Second, the LATE can be decomposed into the following two quantities.
 
 \medskip 
 
-\citet{yama:13} shows that the above four quantities (each defined for $z=0,1$ or $t=0,1$) can be nonparametrically identified under the set of assumptions introduced thus far in this section. More specifically, each of $\bar\lambda(z)$, $\bar\mu(z)$, $\bar\phi(t)$ and $\bar\psi(t)$ can be expressed in terms of the conditional expectations and distributions of the observed outcome, mediator and treatment variables. These effects of interest can therefore be estimated by fitting regression models to each of those conditionals (i.e. a model for $Y_i$ given $M_i$, $T_i$, $Z_i$ and $X_i$, a model for $M_i$ given $T_i$, $Z_i$ and $X_i$, and a model for $T_i$ given $Z_i$ and $X_i$) and calculating the sample analogues of the identified quantities. Uncertainty estimates can then be obtained via simulation-based methods. The \code{ivmediate} function in our package implements this procedure for a selection of models, as we illustrate with an empirical example in the next section.
+\citet{yama:13} shows that the above four quantities (each defined for $z=0,1$ or $t=0,1$) can be nonparametrically identified under the set of assumptions introduced thus far in this section. More specifically, each of $\bar\lambda(z)$, $\bar\mu(z)$, $\bar\phi(t)$ and $\bar\psi(t)$ can be expressed in terms of the conditional expectations and distributions of the observed outcome, mediator and treatment variables. These effects of interest can therefore be estimated by fitting regression models to each of those conditionals (i.e., a model for $Y_i$ given $M_i$, $T_i$, $Z_i$ and $X_i$, a model for $M_i$ given $T_i$, $Z_i$ and $X_i$, and a model for $T_i$ given $Z_i$ and $X_i$) and calculating the sample analogues of the identified quantities. Uncertainty estimates can then be obtained via simulation-based methods. The \code{ivmediate} function in our package implements this procedure for a selection of models, as we illustrate with an empirical example in the next section.
 
 \subsection{Illustration}
 \label{subsec:ivjobs}
@@ -1487,7 +1487,7 @@ b <- glm(job_dich ~ comply + treat + sex + age + marital +
 c <- lm(depress2 ~ job_dich * (comply + treat) + sex + age + marital + 
           nonwhite + educ + income, data = jobs)
 @
-Generally, it is wise to include an interaction term between the actual and assigned treatment in these models in order to allow for the regression functions to vary across treatment conditions. Here, however, the interaction term is not needed because noncompliance is strictly one-sided (i.e. there is no observation for which \code{comply} equals \code{1} and \code{treat} equals \code{0}). These three models can in theory be of any form, as in the case of estimating the ACME via the \code{mediate} function. However, the current version of the \code{ivmediate} function only supports binary outcome models (fitted via \code{glm} with \code{family=binomial}) and linear models (fitted via \code{lm}).
+Generally, it is wise to include an interaction term between the actual and assigned treatment in these models in order to allow for the regression functions to vary across treatment conditions. Here, however, the interaction term is not needed because noncompliance is strictly one-sided (i.e., there is no observation for which \code{comply} equals \code{1} and \code{treat} equals \code{0}). These three models can in theory be of any form, as in the case of estimating the ACME via the \code{mediate} function. However, the current version of the \code{ivmediate} function only supports binary outcome models (fitted via \code{glm} with \code{family=binomial}) and linear models (fitted via \code{lm}).
 
 After fitting the three models, the LACME and LANDE can be easily estimated via the \code{ivmediate} function, which takes those three fitted model objects as main inputs.\footnote{Currently, \code{ivmediate} only estimates the complier average effects and is not capable of estimatingthe mediated and unmediated ITT effects. This limitation will be addressed in a future update.}
 <<keep.source=TRUE, echo = TRUE, results = verbatim>>=
@@ -1496,7 +1496,7 @@ out <- ivmediate(a, b, c, sims = 100, boot = FALSE,
 @
 In the \code{ivmediate} function, the analyst must specify the names of the assigned treatment, actual treatment, and mediator (as they appear in the data frames used to fit the three models) via the \code{enc}, \code{treat}, and \code{mediator} arguments, respectively. The analyst can also set the number of simulations used for the construction of confidence intervals (\code{sims}) as well as whether the nonparametric bootstrap should be used for the confidence intervals (\code{boot}; if \code{FALSE}, the quasi-Bayesian Monte Carlo method will be used). Regardless of this choice, only the intervals for the confidence levels specified by the \code{conf.level} argument (defaults to \code{.95}) will be calculated and retained in the output object (unless the \code{long} option is set to \code{TRUE}, in which case the entire set of simulation draws will be available). 
 
-An important remark is required on the computational demand of the \code{ivmediate} function. The estimation method of \cite{yama:13} involves numerical integration over the support of the mediator for each observation in each simulation iteration. This implies that, if the mediator is continuous (i.e. if \code{model.m} is an \code{lm} object) and the model contains any pre-encouragement covariate, the calculation of confidence intervals via \code{ivmediate} is extremely time-consuming. To ameliorate the situation, we have implemented a parallel execution of the simulation routine across multiple CPU cores. To utilize this function, the analyst should set the \code{multicore} option to \code{TRUE} and \code{mc.cores} to the desired number of cores available on his or her machine. Using $N$ cores will approximately decrease the total computation time by the factor of $N$. This option, unfortunately, is implemented via \code{mclapply} and therefore not currently available on Windows machines.
+An important remark is required on the computational demand of the \code{ivmediate} function. The estimation method of \cite{yama:13} involves numerical integration over the support of the mediator for each observation in each simulation iteration. This implies that, if the mediator is continuous (i.e., if \code{model.m} is an \code{lm} object) and the model contains any pre-encouragement covariate, the calculation of confidence intervals via \code{ivmediate} is extremely time-consuming. To ameliorate the situation, we have implemented a parallel execution of the simulation routine across multiple CPU cores. To utilize this function, the analyst should set the \code{multicore} option to \code{TRUE} and \code{mc.cores} to the desired number of cores available on his or her machine. Using $N$ cores will approximately decrease the total computation time by the factor of $N$. This option, unfortunately, is implemented via \code{mclapply} and therefore not currently available on Windows machines.
 
 The output of \code{ivmediate} can be summarized using the usual \code{summary} function.
 <<keep.source=TRUE, echo = TRUE, results = verbatim>>=
